<resources>
    <string name="app_name">My Calculator</string>
    <string name="ac">AC</string>
    <string name="label_open_parentheses">(</string>
    <string name="label_close_parentheses">)</string>
    <string name="label_add">+</string>
    <string name="label_sub">-</string>
    <string name="label_mul">*</string>
    <string name="label_dot">.</string>
    <string name="label_div">/</string>
    <string name="label_zero">0</string>
    <string name="label_one">1</string>
    <string name="label_two">2</string>
    <string name="label_three">3</string>
    <string name="label_four">4</string>
    <string name="label_five">5</string>
    <string name="label_six">6</string>
    <string name="label_seven">7</string>
    <string name="label_eight">8</string>
    <string name="label_nine">9</string>

</resources>