<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="20dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/text_temp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom|right"
        android:textColor="@color/gray"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@id/text_cal"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_cal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:gravity="bottom|right"
        android:hint="0"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@id/line_1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/text_temp" />

    <Button
        android:id="@+id/button_open_parentheses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_open_parentheses"
        android:textColor="@color/orange"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@+id/button_seven"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_close_parentheses"
        app:layout_constraintTop_toTopOf="@id/line_1"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_close_parentheses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_close_parentheses"
        android:textColor="@color/orange"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/button_eight"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_open_parentheses"
        app:layout_constraintRight_toLeftOf="@id/button_back"
        app:layout_constraintTop_toTopOf="@id/line_1"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:src="@drawable/ic_baseline_backspace_24"
        app:layout_constraintBottom_toTopOf="@id/button_nine"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_close_parentheses"
        app:layout_constraintRight_toLeftOf="@id/button_div"
        app:layout_constraintTop_toTopOf="@id/line_1"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_div"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_div"
        android:textColor="@color/orange"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/button_mul"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/line_1"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_seven"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/button_four"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_close_parentheses"
        app:layout_constraintTop_toBottomOf="@id/button_open_parentheses"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_eight"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/button_five"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_seven"
        app:layout_constraintRight_toLeftOf="@id/button_nine"
        app:layout_constraintTop_toBottomOf="@id/button_close_parentheses"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_nine"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/button_six"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_eight"
        app:layout_constraintRight_toLeftOf="@id/button_mul"
        app:layout_constraintTop_toBottomOf="@id/button_back"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_mul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_mul"
        android:textColor="@color/orange"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/button_sub"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_nine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_div"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_four"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/button_one"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_close_parentheses"
        app:layout_constraintTop_toBottomOf="@id/button_seven"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_five"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/button_two"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_four"
        app:layout_constraintRight_toLeftOf="@id/button_six"
        app:layout_constraintTop_toBottomOf="@id/button_eight"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_six"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/button_three"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_five"
        app:layout_constraintRight_toLeftOf="@id/button_sub"
        app:layout_constraintTop_toBottomOf="@id/button_nine"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_sub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_sub"
        android:textColor="@color/orange"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/button_add"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_six"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_mul"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_one"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/button_ac"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_two"
        app:layout_constraintTop_toBottomOf="@id/button_four"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_two"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/button_zero"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_one"
        app:layout_constraintRight_toLeftOf="@id/button_three"
        app:layout_constraintTop_toBottomOf="@id/button_five"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_three"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/button_dot"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_two"
        app:layout_constraintRight_toLeftOf="@id/button_add"
        app:layout_constraintTop_toBottomOf="@id/button_six"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_add"
        android:textColor="@color/orange"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_three"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sub"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_ac"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/ac"
        android:textColor="@color/orange"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_zero"
        app:layout_constraintTop_toBottomOf="@id/button_one"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_zero"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_ac"
        app:layout_constraintRight_toLeftOf="@id/button_dot"
        app:layout_constraintTop_toBottomOf="@id/button_two"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/label_dot"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_zero"
        app:layout_constraintRight_toLeftOf="@id/button_equal"
        app:layout_constraintTop_toBottomOf="@id/button_three"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/button_equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:src="@drawable/button_equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/button_dot"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_add"
        app:layout_constraintVertical_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>